# QuickShareUI

./: Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  index.html  nginx.conf  saida.rs
src/: app.rs  main.rs
src/components/: error_banner.rs  file_card.rs  file_list.rs  mod.rs  upload_form.rs
src/hooks/: mod.rs  use_clipboard.rs  use_file_upload.rs
src/models/: error.rs  file.rs
src/services/: api.rs  storage.rs
src/store/: files_store.rs  mod.rs
src/utils/: constants.rs  formatters.rs  mod.rs
styles/: main.css
