[package]
name = "QuickShareUI"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Window",
    "Navigator",
    "Clipboard"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
