[package]
name = "QuickShareUI"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = []
release = []

[dependencies]
yew = { version = "0.22", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Window",
    "Storage",
    "Navigator",
    "Clipboard"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
js-sys = "0.3"
gloo = "0.11.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
